tests/ui/closures/2229_closure_analysis/match/partial-move.stderr
error[E0373]: closure may outlive the current function, but it borrows `x.0`, which is owned by the current function
  --> $DIR/partial-move.rs:60:5
   |
LL |     || {
   |     ^^ may outlive borrowed value `x.0`
LL |
LL |         match x {
   |               - `x.0` is borrowed here
   |
note: closure is returned here
  --> $DIR/partial-move.rs:60:5
   |
LL | /     || {
LL | |
LL | |         match x {
LL | |             Struct(a, b) => {
...  |
LL | |     }
   | |_____^
help: to force the closure to take ownership of `x.0` (and any other referenced variables), use the `move` keyword
   |
LL |     move || {
   |     ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0373`.
